...
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <imageView clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nCd-Kn-SGq">
                                            <rect key="frame" x="5" y="45" width="365" height="20"/>
                                            <accessibility key="accessibilityConfiguration" identifier="things.thumbnail">
                                                <accessibilityTraits key="traits" image="YES" summaryElement="YES"/>
                                                <bool key="isElement" value="YES"/>
                                            </accessibility>
                                            <gestureRecognizers/>
                                        </imageView>
                                    </subviews>
...
                                <connections>
                                    <action selector="closeButtonPressed:" destination="hXL-zG-PJc" eventType="touchUpInside" id="N8p-cW-bb4"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="thing.preview">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="G0t-3Y-fbd" firstAttribute="top" secondItem="84g-36-Iu5" secondAttribute="top" constant="-20" id="Aig-5b-aBd"/>
                            <constraint firstItem="1L1-mD-sli" firstAttribute="top" secondItem="84g-36-Iu5" secondAttribute="top" constant="30" id="VBG-5g-Qbl"/>
                            <constraint firstItem="G0t-3Y-fbd" firstAttribute="leading" secondItem="84g-36-Iu5" secondAttribute="leading" id="hvQ-3O-79h"/>
...
