...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.tableView.estimatedRowHeight = 70
        self.tableView.rowHeight = UITableViewAutomaticDimension
        self.tableView.separatorStyle = .none
        self.tableView.accessibilityIdentifier = "things.list"
        
        bind()
        self.viewModel.loadPage()
    }

    func bind() {
...
